syntax = "proto3";

package squirrel.auth.v1;

import "common.proto";

service AuthService {
  rpc Register(RegisterRequest) returns (squirrel.common.v1.AuthTokens);
  rpc Login(LoginRequest) returns (squirrel.common.v1.AuthTokens);
  rpc Refresh(RefreshRequest) returns (squirrel.common.v1.AuthTokens);
  rpc Profile(squirrel.common.v1.Empty) returns (ProfileResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string displayName = 3;
  string workspaceName = 4;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  string totpCode = 3;
}

message RefreshRequest {
  string refreshToken = 1;
}

message ProfileResponse {
  string id = 1;
  string email = 2;
  string displayName = 3;
  string role = 4;
}
